--- a/configurations/K9/KEPLER9_X038.ini
+++ b/configurations/K9/KEPLER9_X038.ini
@@ -1,7 +1,16 @@
-;Exceptionally large Transit Timing Variations
-;induced by two resonant warm gas giants in a three planet system.
-;Michaela Vitkova et al
-;https://arxiv.org/abs/2412.05609
+;1) Kepler-9: A System of Multiple Planets Transiting a Sun-Like Star, Confirmed by Timing Variations, Matthew J. Holman et al.
+;2) MODELING Kepler TRANSIT LIGHT CURVES AS FALSE POSITIVES: REJECTION OF BLEND SCENARIOS FOR KEPLER-9, AND VALIDATION OF KEPLER-9 D, A SUPER-EARTH-SIZE PLANET IN A MULTIPLE SYSTEM, Guillermo Torres et al.
+;3) The multiple planets transiting Kepler-9, I. Inferring stellar properties and planetary compositions, Mathieu Havel et al.
+;4) Kepler-9 revisited, 60% the mass with six times more data, Stefan Dreizler and Aviv Ofir
+;5) Kepler Object of Interest Network II. Photodynamical modelling of Kepler-9 over 8 years of transit observations, J. Freudenthal et al.
+;6) HARPS-N radial velocities confirm the low densities of the Kepler-9 planets, Borsato, L et al.
+;
+;Extracted TT manually from 5) but did not use them (KEPLER9.xlsx)
+;Used TT from 4) Table 1
+;Used planet parameters from 6) Table 3
+;Removed the first few TT from data, because 6) Tabele 3 refers to epoch 2455088.212 instead of 2454900
+
+
 
 [Astronomical Constants]     # Do not edit this section!
                              # You may use the astronomical constants defined in this section in
@@ -22,25 +31,27 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/mcmc/archive/TT_fit/X039_sim_cd11P_TT96/TOI-4504_SIM_X039.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/K9.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = X039               # You can use this comment for example as diagram title in your result plots
-transit_precision = 1e-1     # TT, T1, etc. will be calculated from flux with this precision
+max_intervall_extensions = 5 # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
+                             # If no TT has been found max_intervall_extensions * dt around the expected interval between 2 iterations
+                             # the search for this particular TT will be aborted. (dt comes from the list dts.)
+comment = K9                 # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
-start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 1e4                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+start_date = 2455088.212         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
+dt = 1e5                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-starts = [2458400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [20000]             # [s] <float> real time differences between simulation iterations inside each intervall
+starts = [2455088.212]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2456400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [10000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -50,7 +61,7 @@ dts =    [20000]             # [s] <float> real time differences between simulat
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # dt is proportional to the velocity of the objects in the animation.
                              # Because dt can change between intervalls, so can the animated velocity of objects in the video.
-;sim_flux_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt20000.csv # <string> When this parameter is provided, the simulated flux will be saved.
+;sim_flux_file = ../data/simulations/sim001.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
@@ -58,24 +69,18 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
-;lmfit = True                 # True for LMfit, False for MCMC
-flux_weight = 1  # weighting flux residuals against rv and tt residuals
-;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
-rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
-
-tt_file = ../data/simulations/tt_simX040_13_4.csv # <string> file with measured transit times (real data)
-tt_weight = 1  # weighting tt residuals against rv and flux residuals
-eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
-eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
-target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
-                     # times without searching for the precise transit times in the simulated flux
+;lmfit = True                # True for LMfit, False for MCMC
+;tt_file = ../data/KEPLER9/tt.csv # <string> file with measured transit times (real data)
+tt_file = ../data/KEPLER9/tt_late.csv # <string> file with measured transit times (real data)
+eclipsers_names = KEPLER9b, KEPLER9c  # only primary transits by these bodies are relevant when fitting for TT
+eclipsees_names = KEPLER9             # only transits eclipsing these bodies are relevant when fitting for TT
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 256                # Number of mcmc chains
-burn_in = 500                # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 256                 # Number of mcmc chains
+burn_in = 500                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
@@ -94,8 +99,8 @@ scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
-;video_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxml.mp4  # <string> the resulting video is saved in this file
-frames = 100                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
+frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -129,55 +134,56 @@ red_dot_height = 1/20        # <float> height of red dot in light curve plot rel
 red_dot_width = 1/235        # <float> width of red dot in light curve plot relative to width of x-axis
 
 
-[TOI4504]
+[KEPLER9]
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
-mass = 0.885 * m_sun       # +-0.05
-radius = 0.92 * r_sun
-luminosity = 0.62 * l_sun
-limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
-limb_darkening_2 = 0.3495
-limb_darkening_parameter_type = q
+mass =                          1.05   * m_sun             # +-0.03
+radius =                        0.9742 * r_sun             # +-0.0083
+luminosity =                    0.9742 * 0.9742 * l_sun    # L is proportional to R**2 * T**4,  T almost identical to sol
+limb_darkening_1 =              0.351                      # +-0.047
+limb_darkening_2 =              0.269                      # +-0.071
+limb_darkening_parameter_type = u
 
 
-[TOI4504b]
+[KEPLER9d]
 body_type = planet
-primary =   TOI4504
+primary =   KEPLER9
 color =     0.99, 0.01, 0.01
-mass =      10.4 * m_earth
-radius =    2.691 * r_earth
+mass =      10 * m_earth
+radius =    1.64 * r_earth  # +0.19 −0.14
 e =         0
-i =         86.5
-P =         2.42614 * day
+i =         90
+P =         1.592851 * day  # +- 0.000045
 Omega =     0
-omega =     90
-ma =        303.6
+omega =     0
+ma =        0    # find ma so that T0 @ 2455015.0943 +0.0018 −0.0033
 
-
-[TOI4504d]
+[KEPLER9b]
 body_type = planet
-primary =   TOI4504
-color =     0.01, 0.99, 0.01
-mass =      1.3 * m_jup,      1.2 * m_jup,      1.4 * m_jup,          0.1 * m_jup
-radius =    1 * r_jup,        #
-e =         0.10,             0.08,             0.12,                 0.01
-i =         89.1,             #
-P =         41.2 * day,       41.0 * day,       41.4 * day,           0.1 * day
-Omega =     5,                0,                10,                   3
-omega =     87,               85,               89,                   1
-ma =        330,              328,              332,                  1
-
-
-[TOI4504c]
-body_type = planet
-primary =   TOI4504
-color =     0.99, 0.99, 0.01
-mass =      3.6 * m_jup,      3.3 * m_jup,       3.9 * m_jup,         0.15 * m_jup
-radius =    1 * r_jup,        #
-e =         0.05,             0.03,              0.07,                0.01
-i =         89.8,             #
-P =         83.3 * day,       83.1 * day,        83.5 * day,          0.1 * day
-Omega =     1,                #                                       fix
-omega =     296,              294,               298,                 1
-ma =        150,              148,               152,                 1
+primary =   KEPLER9
+color =     0.01, 0.7, 0.7
+#           value               lower bound       upper bound        sigma
+mass =      43.4 * m_earth,     20 * m_earth,     80 * m_earth,      1.8 * m_earth
+radius =    8.29 * r_earth,   #                                      0.5 * r_earth
+e =         0.0609,             0.05,             0.07,              0.0012
+i =         88.983            #                                      0.006
+P =         19.25 * day,        19.15 * day,      19.35 * day,       0.05 * day
+Omega =     180,              #                                      fix
+omega =     357,                355,              359,               0.5
+ma =        2.6,                0,                5,                 0.6
+    
+    
+[KEPLER9c]
+body_type = planet    
+primary =   KEPLER9
+color =     0.7, 0.01, 0.7
+#           value               lower bound       upper bound        sigma
+mass =      29.9 * m_earth,     15 * m_earth,     60.0 * m_earth,    1.2 * m_earth
+radius =    8.08 * r_earth,   #                                      0.5 * r_earth
+e =         0.06691,            0.055,            0.075,             0.00011
+i =         89.188,           #                                      0.006
+P =         38.95 * day,        38.5 * day,       39.5 * day,        0.1 * day
+Omega =     179,                177,              181,               0.2
+omega =     167.5,              167,              168,               0.1
+ma =        307.4,              307,              308,               0.1
