--- a/configurations/TOI4504/TOI-4504_X014mean.ini
+++ b/configurations/TOI4504/TOI-4504_X014mean.ini
@@ -21,10 +21,10 @@ day = hour * 24              # [s] One day in seconds
 year = day * 365.24219       # [s] Approximately one tropical earth year in seconds
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504_result001.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/TOI-4504_X014mean.json  # <string> simulation results like transit times are saved in this file
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = c: Vitkova d: maxlikelihood  # You can use this comment for example as diagram title in your result plots
+comment = c+d mean from X014
 verbose = True               # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
@@ -111,25 +111,25 @@ t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after sim
 body_type = planet
 primary = TOI-4504
 color = 0.01, 0.99, 0.01
-mass = 1.4166 * m_jup
-radius = 1.06 * r_jup
-e = 0.1225325
-i = 88.5781
-P = 41.510691327 * day
-Omega = 1.5319
-omega = 84.2265
-ma = 320.8314
+mass   = m_jup * 1.4345473160637994
+radius = r_jup * 0.9925436237070173
+e      = 0.06008210917446574
+i      = 88.4170960673185
+P      = day * 41.113059217591804
+Omega  = 0.42954148553021204
+omega  = 99.96344971456753
+ma     = 283.72602358218944
 
 
 [TOI-4504c]
 body_type = planet
 primary = TOI-4504
 color = 0.99, 0.99, 0.01
-mass = 3.7672 * m_jup  # +-0.18
-radius = 0.9897 * r_jup
-e = 0.0320  # +-0.0015
-i = 89.69 # +-0.03
-P = 82.5438 * day  # valid for epoch BJD = 2458400    +-0.0163 days
-Omega = 0  # Ω +-1
-omega = 270.9 # +-2.1????  ω
-ma = 173.1  # +-2
+mass   = m_jup * 3.740113188704636
+radius = r_jup * 1.009683189264442
+e      = 0.03207250808381681
+i      = 89.69268196264746
+P      = day * 82.4898027214974
+Omega  = 0.24168045470620345
+omega  = 270.74631218814767
+ma     = 175.2193857453591
