--- a/configurations/TOI4504/TOI-4504_b_mcmc.ini
+++ b/configurations/TOI4504/TOI-4504_b_mcmc.ini
@@ -22,25 +22,27 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/mcmc/archive/TT_fit/X039_sim_cd11P_TT96/TOI-4504_SIM_X039.json  # <string> simulation results like transit times are saved in this file
-result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
+result_file = ../results/TOI-4504_mcmc_b.json  # <string> simulation results like transit times are saved in this file
+result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = X039               # You can use this comment for example as diagram title in your result plots
-transit_precision = 1e-1     # TT, T1, etc. will be calculated from flux with this precision
-;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
+;verbose = True               # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 1e4                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 10000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-starts = [2458400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [20000]             # [s] <float> real time differences between simulation iterations inside each intervall
+starts = [2458400]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2458862]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [100]               # [s] <float> real time differences between simulation iterations inside each intervall
+;starts = [2458400.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
+;ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;dts =    [120, 120]               # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -50,7 +52,7 @@ dts =    [20000]             # [s] <float> real time differences between simulat
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # dt is proportional to the velocity of the objects in the animation.
                              # Because dt can change between intervalls, so can the animated velocity of objects in the video.
-;sim_flux_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt20000.csv # <string> When this parameter is provided, the simulated flux will be saved.
+;sim_flux_file = ../data/simulations/sim001.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
@@ -58,44 +60,31 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
+;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/TOI-4504/TOI4504_b_transits_27til94.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
-;lmfit = True                 # True for LMfit, False for MCMC
-flux_weight = 1  # weighting flux residuals against rv and tt residuals
-;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
-rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
-
-tt_file = ../data/simulations/tt_simX040_13_4.csv # <string> file with measured transit times (real data)
-tt_weight = 1  # weighting tt residuals against rv and flux residuals
-eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
-eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
-target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
-                     # times without searching for the precise transit times in the simulated flux
-
-fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 256                # Number of mcmc chains
-burn_in = 500                # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
+rv_offset = 2064.7
+fitting_results_directory = ../results/mcmc
+walkers = 200                # Number of mcmc chains
+burn_in = 1000               # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
-moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
-;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
-
-thin_samples = 10            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
 chunk_size = 250             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
-;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
-unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
+thin_samples = 30            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
                              # Specify for each of the above body parameters its unit to be used in mcmc result plots
-;scale = {"mass": 1/m_earth, "radius": 1/r_earth, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
-scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
+scale = {"mass": 1/m_earth, "radius": 1/r_earth, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
                              # Specify for each of the above body parameters the value it has
                              # to be multiplied with in order to represent its above specified unit.
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
-;video_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxml.mp4  # <string> the resulting video is saved in this file
-frames = 100                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
+frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -129,7 +118,7 @@ red_dot_height = 1/20        # <float> height of red dot in light curve plot rel
 red_dot_width = 1/235        # <float> width of red dot in light curve plot relative to width of x-axis
 
 
-[TOI4504]
+[TOI-4504]
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
@@ -141,43 +130,46 @@ limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
 
 
-[TOI4504b]
+[TOI-4504b]
+#           value               lower bound       upper bound        sigma
 body_type = planet
-primary =   TOI4504
+primary =   TOI-4504
 color =     0.99, 0.01, 0.01
-mass =      10.4 * m_earth
-radius =    2.691 * r_earth
+mass =      10.4 * m_earth,     1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
+radius =    2.691 * r_earth,    0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
 e =         0
-i =         86.5
-P =         2.42614 * day
+i =         86.5,               84.0,             89.0,              1.5
+P =         2.42614 * day,      2.426 * day,      2.4263 * day,      0.00005 * day
 Omega =     0
 omega =     90
-ma =        303.6
+ma =        303.6,              301.25,           306.25,            1
 
 
-[TOI4504d]
+[TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
 body_type = planet
-primary =   TOI4504
+primary =   TOI-4504
 color =     0.01, 0.99, 0.01
-mass =      1.3 * m_jup,      1.2 * m_jup,      1.4 * m_jup,          0.1 * m_jup
-radius =    1 * r_jup,        #
-e =         0.10,             0.08,             0.12,                 0.01
-i =         89.1,             #
-P =         41.2 * day,       41.0 * day,       41.4 * day,           0.1 * day
-Omega =     5,                0,                10,                   3
-omega =     87,               85,               89,                   1
-ma =        330,              328,              332,                  1
-
-
-[TOI4504c]
-body_type = planet
-primary =   TOI4504
-color =     0.99, 0.99, 0.01
-mass =      3.6 * m_jup,      3.3 * m_jup,       3.9 * m_jup,         0.15 * m_jup
-radius =    1 * r_jup,        #
-e =         0.05,             0.03,              0.07,                0.01
-i =         89.8,             #
-P =         83.3 * day,       83.1 * day,        83.5 * day,          0.1 * day
-Omega =     1,                #                                       fix
-omega =     296,              294,               298,                 1
-ma =        150,              148,               152,                 1
+#           value               lower bound       upper bound        sigma
+mass =      1.4166 * m_jup,   #  1.1 * m_jup,      1.7 * m_jup,       0.15 * m_jup
+radius =    1.012 * r_jup,    #  0.5 * r_jup,      1.5 * r_jup,       0.5 * r_jup
+e =         0.0445,           #  0.0,              0.12,              0.025
+i =         88.8,             #  86.5,             89.5,              0.5
+P =         40.986 * day,     #  40.3 * day,       41.7 * day,        0.2 * day
+Omega =     0,                #  -15,              15,                3
+omega =     93.5,             #  75,               120,               10
+ma =        280,              #  260,              310,               12
+    
+    
+[TOI-4504c]    
+body_type = planet    
+primary =   TOI-4504    
+color =     0.99, 0.99, 0.01    
+#           value               lower bound       upper bound        sigma
+mass =      3.7672 * m_jup,   #  3.0 * m_jup,      4.5 * m_jup,       0.25 * m_jup
+radius =    0.9897 * r_jup,   #  0.8 * r_jup,      1.2 * r_jup,       0.07 * r_jup
+e =         0.0320,           #  0.0,              0.07,              0.015
+i =         89.69,            #  89.25,            90.0,              0.15
+P =         82.5438 * day,    #  82 * day,         83.3 * day,        0.2 * day
+Omega =     0.8,              #  -15,              15,                3
+omega =     270.9,            #  255,              285,               5
+ma =        173.1,            #  165,              190,               5
