--- a/configurations/Sim/TOI-4504_SIM_X039.ini
+++ b/configurations/Sim/TOI-4504_SIM_X039.ini
@@ -22,33 +22,24 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-;result_file = ../results/TOI-4504_sim_for_mcmc001.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/mcmc/archive/TT_fit/X039_sim_cd11P_TT96/TOI-4504_SIM_X039.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = max_likelihood aus X023  # You can use this comment for example as diagram title in your result plots
-verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+comment = X039               # You can use this comment for example as diagram title in your result plots
+;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 10000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 1e4                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-;starts = [2458401.0, 2460660.0, 2460837.0]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458401.9, 2460760.0, 2460882.0]  # [days] <float> ending times of the intervalls for which simulation data will be calculated
-;dts =    [1000, 1000, 1000]  # [s] <float> real time differences between simulation iterations inside each intervall
-;starts = [2458401.24, 2458483.05, 2458564.92, 2458647.17, 2459065.09, 2459148.34, 2459230.96, 2459313.11, 2459975.93, 2460059.48, 2460142.46, 2460695.47, 2460718.48, 2460736.58, 2460859.13]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
-starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2460882]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-;starts = [2458400, 2458447]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458403, 2458450]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-;ends =   [2460882]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [10000]             # [s] <float> real time differences between simulation iterations inside each intervall
+starts = [2458400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [20000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -58,7 +49,7 @@ dts =    [10000]             # [s] <float> real time differences between simulat
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # dt is proportional to the velocity of the objects in the animation.
                              # Because dt can change between intervalls, so can the animated velocity of objects in the video.
-;sim_flux_file = ../data/simulations/sim_for_mcmc001.csv # <string> When this parameter is provided, the simulated flux will be saved.
+;sim_flux_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt20000.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
@@ -66,32 +57,30 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
-;flux_file = ../data/TOI-4504/TOI4504_b_transits_27til94.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
+;lmfit = True                 # True for LMfit, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
-;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
-;tt_file = ../data/TOI-4504/tt_first_last_only.csv # <string> file with measured transit times (real data)
+tt_file = ../data/simulations/tt_simX039_31_62.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
-eclipsers_names = TOI-4504c, TOI-4504d  # only primary transits by these bodies are relevant when fitting for TT
-eclipsees_names = TOI-4504              # only transits eclipsing these bodies are relevant when fitting for TT
+eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
+eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
 target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 22                 # Number of mcmc chains
-burn_in = 1                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 256                # Number of mcmc chains
+burn_in = 500                # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
-thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 1              # Every chunk_size steps after burn-in phase, results will be saved.
+thin_samples = 10            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 250             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -104,16 +93,16 @@ scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
-video_file = ../animations/TOI-4504_sim_for_mcmc.mp4  # <string> the resulting video is saved in this file
-frames = 5                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+;video_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxml.mp4  # <string> the resulting video is saved in this file
+frames = 100                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
-fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
+fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
 
 [Scale]                      # This section controls the size of objects in the animation.
 scope_left = 0.4 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left].
                              # Middle of window is (0.0, 0.0)
-scope_right = 0.02 * au       # [m] <float> scope of right plotting window is [-scope_right, scope_right].
+scope_right = 0.4 * au       # [m] <float> scope of right plotting window is [-scope_right, scope_right].
                              # Middle of window is (0.0, 0.0)
 autoscaling = on             # <string> allowed values: on, off
 star_scale_left = 100.0      # [1] <float> (if autoscale off) animate stars with StarScale_left times
@@ -139,7 +128,7 @@ red_dot_height = 1/20        # <float> height of red dot in light curve plot rel
 red_dot_width = 1/235        # <float> width of red dot in light curve plot relative to width of x-axis
 
 
-[TOI-4504]
+[TOI4504]
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
@@ -151,47 +140,43 @@ limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
 
 
-[TOI-4504b]
-#           value               lower bound       upper bound        sigma
+[TOI4504b]
 body_type = planet
-primary =   TOI-4504
+primary =   TOI4504
 color =     0.99, 0.01, 0.01
-mass =      10.4 * m_earth,   #  1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
-radius =    2.691 * r_earth,  #  0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
+mass =      10.4 * m_earth
+radius =    2.691 * r_earth
 e =         0
-i =         86.5,             #  84.0,             89.0,              1.5
-P =         2.42614 * day,    #  2.426 * day,      2.4263 * day,      0.00005 * day
+i =         86.5
+P =         2.42614 * day
 Omega =     0
 omega =     90
-ma =        303.6,            #  301.25,           306.25,            1
+ma =        303.6
 
 
-[TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
+[TOI4504d]
 body_type = planet
-primary =   TOI-4504
+primary =   TOI4504
 color =     0.01, 0.99, 0.01
-#           value                   lower bound       upper bound        sigma
-mass =      1.092289233 * m_jup,     0.1 * m_jup,      10.0 * m_jup,       0.5 * m_jup
-radius =    1.012 * r_jup,         #  0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.09678228,              0.0,              0.15,              0.035
-i =         89.31542947,           #  86.5,             89.5,              0.5
-P =         40.99192343 * day,      39.7 * day,       41.7 * day,        0.4 * day
-Omega =     -0.394695707,           -15,              15,                8
-omega =     89.84592571,            75,               135,               20
-ma =        309.8531469,            180,              359.99,               20
+mass =      1.3 * m_jup,      1.2 * m_jup,      1.4 * m_jup,          0.1 * m_jup
+radius =    1 * r_jup,        #
+e =         0.10,             0.08,             0.12,                 0.01
+i =         89.1,             #
+P =         41.2 * day,       41.0 * day,       41.4 * day,           0.1 * day
+Omega =     5,                0,                10,                   3
+omega =     87,               85,               89,                   1
+ma =        330,              328,              332,                  1
 
 
-[TOI-4504c]
+[TOI4504c]
 body_type = planet
-primary =   TOI-4504
+primary =   TOI4504
 color =     0.99, 0.99, 0.01
-#           value                   lower bound       upper bound        sigma
-mass =      3.703002875 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
-radius =    0.9897 * r_jup,        #  0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.059114337,             0.0,              0.10,              0.025
-i =         89.95832464,           #  89.25,            90.0,              0.15
-P =         83.16352469 * day,       82 * day,         83.7 * day,        0.2 * day
-Omega =     0.8,                   #  -15,              15,                3
-omega =     292.8980329,             180,              359.99,            20
-ma =        155.1396226,             0,                359.99,            20
-
+mass =      3.6 * m_jup,      3.3 * m_jup,       3.9 * m_jup,         0.15 * m_jup
+radius =    1 * r_jup,        #
+e =         0.05,             0.03,              0.07,                0.01
+i =         89.8,             #
+P =         83.3 * day,       83.1 * day,        83.5 * day,          0.1 * day
+Omega =     1,                #                                       fix
+omega =     296,              294,               298,                 1
+ma =        150,              148,               152,                 1
