--- a/configurations/Sim/TOI-4504_simX024_01.ini
+++ b/configurations/Sim/TOI-4504_simX024_01.ini
@@ -22,12 +22,11 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/mcmc/archive/TT_fit/X039_sim_cd11P_TT96/TOI-4504_SIM_X039.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt20000.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = X039               # You can use this comment for example as diagram title in your result plots
-transit_precision = 1e-1     # TT, T1, etc. will be calculated from flux with this precision
-;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+comment = simX024               # You can use this comment for example as diagram title in your result plots
+verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
@@ -38,9 +37,17 @@ dt = 1e4                     # [s] <float> real time difference between simulati
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-starts = [2458400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;starts = [2458401.0, 2460660.0, 2460837.0]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
+;ends =   [2458401.9, 2460760.0, 2460882.0]  # [days] <float> ending times of the intervalls for which simulation data will be calculated
+;dts =    [1000, 1000, 1000]  # [s] <float> real time differences between simulation iterations inside each intervall
+;starts = [2458401.24, 2458483.05, 2458564.92, 2458647.17, 2459065.09, 2459148.34, 2459230.96, 2459313.11, 2459975.93, 2460059.48, 2460142.46, 2460695.47, 2460718.48, 2460736.58, 2460859.13]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
+;ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
+starts =   [2458400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;starts = [2458728]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [20000]             # [s] <float> real time differences between simulation iterations inside each intervall
+;ends =   [2458731]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [20000]              # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -58,30 +65,34 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
+;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_b_transits_27til94.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
-;lmfit = True                 # True for LMfit, False for MCMC
+lmfit = True                 # True for LMfit, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
-tt_file = ../data/simulations/tt_simX040_13_4.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt_start_end_locked.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/simulations/tt_simX024.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
 eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
-target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
+target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits  OBSOLETE?
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 256                # Number of mcmc chains
-burn_in = 500                # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 32                 # Number of mcmc chains
+burn_in = 1                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
-thin_samples = 10            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 250             # Every chunk_size steps after burn-in phase, results will be saved.
+thin_samples = 30            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 10              # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -95,7 +106,7 @@ scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
 ;video_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxml.mp4  # <string> the resulting video is saved in this file
-frames = 100                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 1000                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -159,25 +170,25 @@ ma =        303.6
 body_type = planet
 primary =   TOI4504
 color =     0.01, 0.99, 0.01
-mass =      1.3 * m_jup,      1.2 * m_jup,      1.4 * m_jup,          0.1 * m_jup
-radius =    1 * r_jup,        #
-e =         0.10,             0.08,             0.12,                 0.01
-i =         89.1,             #
-P =         41.2 * day,       41.0 * day,       41.4 * day,           0.1 * day
-Omega =     5,                0,                10,                   3
-omega =     87,               85,               89,                   1
-ma =        330,              328,              332,                  1
+mass =      1.306938619229288 * m_jup,    1.2 * m_jup,      1.4 * m_jup,           1
+radius =    1.012 * r_jup,              #
+e =         0.10527976401695996,          0.08,             0.11,                  1
+i =         88.8,                        # 87,               89.5,                  1
+P =         41.16768686103386 * day,      41.1 * day,       41.25 * day,           1
+Omega =     4.9620750482336655,          #  0,               6,                     1
+omega =     87.12992034721043,           # 85,               89,                    1
+ma =        329.9695998776485,           328,               330,                   1
 
 
 [TOI4504c]
 body_type = planet
 primary =   TOI4504
 color =     0.99, 0.99, 0.01
-mass =      3.6 * m_jup,      3.3 * m_jup,       3.9 * m_jup,         0.15 * m_jup
-radius =    1 * r_jup,        #
-e =         0.05,             0.03,              0.07,                0.01
-i =         89.8,             #
-P =         83.3 * day,       83.1 * day,        83.5 * day,          0.1 * day
-Omega =     1,                #                                       fix
-omega =     296,              294,               298,                 1
-ma =        150,              148,               152,                 1
+mass =      3.5913902107546636 * m_jup,  3.3 * m_jup,       3.8 * m_jup,           1
+radius =    0.9897 * r_jup,             #
+e =         0.051523476358734575,        0.048,             0.058,                 1
+i =         89.79,                      # 89.0,              90.0,                  1
+P =         83.28376891641055 * day,     82.7 * day,        83.6 * day,            1
+Omega =     0.8,                         -3,                9,                     1
+omega =     296.08745527524496,         # 294,               310,                   1
+ma =        150.0142378614026,           135,               156,                   1
