--- a/configurations/TOI4504/TOI-4504.ini
+++ b/configurations/TOI4504/TOI-4504.ini
@@ -1,3 +1,8 @@
+;Exceptionally large Transit Timing Variations
+;induced by two resonant warm gas giants in a three planet system.
+;Michaela Vitkova et al
+;https://arxiv.org/abs/2412.05609
+
 [Astronomical Constants]     # Do not edit this section!
                              # You may use the astronomical constants defined in this section in
                              # all following sections, e.g. scope_left = 1.9 * au
@@ -14,26 +19,40 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 hour = 60 * 60               # [s] One hour in seconds
 day = hour * 24              # [s] One day in seconds
 year = day * 365.24219       # [s] Approximately one tropical earth year in seconds
-
+rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/mcmctest1.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = mcmctest1          # You can use this comment for example as diagram title in your result plots
-verbose = False              # If False, only error messages will be printed to the console. Useful when running MCMC.
-
+comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
+;verbose = True               # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 20000                   # [s] <float> real time difference between simulation iterations outside of
+dt = 10000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-;sim_flux_file = ../data/simulations/mcmctest1_simflux.csv # <string> When this parameter is provided, the simulated flux will be saved.
+starts = [2458400]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2460862]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [100]               # [s] <float> real time differences between simulation iterations inside each intervall
+;starts = [2458400.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
+;ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;dts =    [120, 120]               # [s] <float> real time differences between simulation iterations inside each intervall
+                             # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
+                             # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
+                             # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
+                             # each simulation iteration will be shown in the video. Instead only 1/sampling_rate of the calculated
+                             # iterations is used as a frame in the animation. sampling_rate = (total_iterations - 1) // frames + 1
+                             # (// is integer-division)
+                             # dt * sampling_rate is the real time difference between 2 frames in the animation.
+                             # dt is proportional to the velocity of the objects in the animation.
+                             # Because dt can change between intervalls, so can the animated velocity of objects in the video.
+;sim_flux_file = ../data/simulations/sim001.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
@@ -41,23 +60,30 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-flux_file = ../data/simulations/mcmctest1_simflux.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
-walkers = 16                 # number of mcmc chains
-steps = 30                # number of mcmc steps
-burn_in = 1               # number_of_points_disregarded (burn-in phase)
+walkers = 32#2000               # Number of mcmc chains
+burn_in = 1#2000               # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+steps = 1e7                  # Number of mcmc steps after burn-in phase
+chunk_size = 100#400             # Every chunk_size steps after burn-in phase, results will be saved.
+bins = 50#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
+thin_samples = 10#50            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
+                             # Specify for each of the above body parameters its unit to be used in mcmc result plots
+scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
+                             # Specify for each of the above body parameters the value it has
+                             # to be multiplied with in order to represent its above specified unit.
 
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
-video_file = ../animations/mcmctest1.mp4  # <string> the resulting video is saved in this file
+;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
 frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-
 
 [Scale]                      # This section controls the size of objects in the animation.
 scope_left = 0.4 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left].
@@ -79,7 +105,6 @@ max_radius = 2.0             # [%] <float> (if autoscale on) maximum radius of l
                              # relative to plot scope. radius=100 would fill the whole plot.
                              # If necessary, scaling will be done logarithmically instead of linear.
 
-
 [Plot]                       # Adjust the plot parameters in this section only if the plots in the video do not fit your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
 figure_height = 8            # <int>   height of figure which contains all plots and animations
@@ -91,27 +116,55 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 
 [TOI-4504]
 body_type = star
-primary = self               # "self" if this body is the primary body of this system
-                             # else is primary the name of the body the Kepler parameters of this body refer to
+primary = self
 color = 0.99, 0.99, 0.99
-mass = 0.885 * m_sun
+mass = 0.885 * m_sun       # +-0.05
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
-limb_darkening_1 = 0.4765
+limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
 limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
 
 
-[TOI-4504d]
+[TOI-4504b]
 body_type = planet
-primary = TOI-4504           # "self" if this body is the primary body of this system
-                             # else is primary the name of the body the Kepler parameters of this body refer to
-color = 0.5, 0.5, 0.99
-mass = 1.4166 * m_jup
-radius = 1.012 * r_jup, 0.3 * r_jup, 1.7 * r_jup
-e = 0.0445#, 0.04, 0.05
-i = 89.6#, 84, 96
-P = 40.986 * day, 30 * day, 50 * day
-Omega = 0
-omega = 93.5, 75, 110
-ma = 350, 340, 359
+primary =   TOI-4504
+color =     0.99, 0.01, 0.01
+mass =      10.4 * m_earth
+radius =    2.691 * r_earth
+e =         0.0
+i =         87.4
+P =         2.42614 * day
+Omega =     0
+omega =     90
+ma =        303.2719   # fits t0=2459038.458 from Vitkova paper
+
+
+[TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
+body_type = planet
+primary =   TOI-4504
+color =     0.01, 0.99, 0.01
+#           value              lower bound    upper bound    sigma
+mass =      1.4166 * m_jup,    1.1 * m_jup,   1.7 * m_jup,   0.15 * m_jup
+radius =    1.012 * r_jup,     0.5 * r_jup,   1.5 * r_jup,   0.5 * r_jup
+e =         0.0445,            0.0,           0.12,          0.025
+i =         88.8,              86.5,          89.5,          0.5
+P =         40.986 * day,      40.3 * day,    41.7 * day,    0.2 * day
+Omega =     0,                 -15,           15,            3
+omega =     93.5,              75,            120,           10
+ma =        280,               260,           310,           12
+
+
+[TOI-4504c]
+body_type = planet
+primary =   TOI-4504
+color =     0.99, 0.99, 0.01
+#           value              lower bound    upper bound    sigma
+mass =      3.7672 * m_jup,    3.0 * m_jup,   4.5 * m_jup,   0.25 * m_jup
+radius =    0.9897 * r_jup,    0.8 * r_jup,   1.2 * r_jup,   0.07 * r_jup
+e =         0.0320,            0.0,           0.07,          0.015
+i =         89.69,             89.25,         90.0,          0.15
+P =         82.5438 * day,     82 * day,      83.3 * day,    0.2 * day
+Omega =     0.8,             # -15,           15,            3
+omega =     270.9,             255,           285,           5
+ma =        173.1,             165,           190,           5
